@@ -14,28 +14,28 @@ my $data_dir = File::Object->new->up->dir('data');
 my $obj = PYX::SGML::Raw->new;
 stdout_is(
 	sub {
-		$obj->parse_file($data_dir->file('start_tag1.pyx')->s);
+		$obj->parse_file($data_dir->file('start_element1.pyx')->s);
 		return;
 	},
-	'<tag',
+	'<element',
 );
 
 # Test.
 $obj = PYX::SGML::Raw->new;
 stdout_is(
 	sub {
-		$obj->parse_file($data_dir->file('start_tag2.pyx')->s);
+		$obj->parse_file($data_dir->file('start_element2.pyx')->s);
 		return;
 	},
-	'<tag par="val"',
+	'<element par="val"',
 );
 
 # Test.
 $obj = PYX::SGML::Raw->new;
 stdout_is(
 	sub {
-		$obj->parse_file($data_dir->file('start_tag3.pyx')->s);
+		$obj->parse_file($data_dir->file('start_element3.pyx')->s);
 		return;
 	},
-	'<tag par="val\nval"',
+	'<element par="val\nval"',
 );
